2006-04-25  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, po/LINGUAS: Updating 2.15 branch with the new
	  po/LINGUAS.

2006-04-25  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.4: 
	* NEWS: Updated.
	* configure.ac: Update to new release version.
	* po/LINGUAS: Revert to old version.

2006-04-24  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.3: 
	* NEWS: Updated.
	* configure.ac: Update to new release version.
	* gui/Makefile.am, po/POTFILES.in: Fix gdmsetup.desktop.in.in stuff.

2006-04-20  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac: Fix to configure.ac to conform to po/LINGUAS
	  standard.  Fixes bug #339153.  Patch by Przemyslaw Grzegorczyk
	  <pgrzegorczyk@gmail.com>.
	  
2006-04-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.c: Fix for C89 compilers.  Patch by Jens Granseuer
	  <jensgr@gmx.net>.
	
2006-04-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/gdmsetup.glade, gui/greeter/greeter.c:
	  Fixed strings so that they are marked as translatable.
	  Fixes bug #338765.  Patch provided by Vincent Fretin
	  <vincent.fretin@gmail.com>.

2006-04-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmchooser.c:  Fix setting of GdmHosts so it should use
	  the hosts from the config file when when BROADCAST/MULTICAST
	  is set to false.  Partial fix for #338274.  Thanks to Tiago
	  Vignatti <tv02@c3sl.ufpr.br> for noticing this.

2006-04-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.desktop.in.in: Added.  This makes gdmsetup.desktop
	  get properly translated.  Fixes bug #334647.  Patch by Vincent
	  Fretin <vincent.fretin@gmail.com>
	* gui/gdmsetup.desktop.in: Removed
	* gui/Makefile.am: Updated to reflect change.
	* configure.ac, po/LINGUAS: Updated to reflect latest po/LINGUAS
	  patch.  Fixes bug #33769.  Patch provided by Przemyslaw Grzegorczyk
	  <pgrzegorczyk@gmail.com>.

2006-04-14  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.14.2: 
	* NEWS: Updated.