@@ -1,5 +1,13 @@
 2006-04-25  Brian Cameron  <brian.cameron@sun.com>
 
+	* docs/C/gdm.xml.  Add units information to TimedLoginDelay.
+	  Fixes bug #334531.  Improved PAM documentation based on input
+	  from Gary Winger <Gary.Winiger@sun.com>.  Added info about
+	  GET_CUSTOM_CONFIG_FILE.  Added docs for AlwaysLoginCurrentSession
+	  which I noticed were missing.
+
+2006-04-25  Brian Cameron  <brian.cameron@sun.com>
+
 	* configure.ac, po/LINGUAS: Updating 2.15 branch with the new
 	  po/LINGUAS.
 
